--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            app:tabIndicatorColor="#ffffff"
+            android:layout_height="wrap_content"
             app:tabMode="fixed"
             app:tabGravity="fill">
 
