--- a/app/src/main/res/layout/fragment_compass.xml
+++ b/app/src/main/res/layout/fragment_compass.xml
@@ -17,12 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Software Sensor" />
+            android:text="@string/compass.ratioButtons.softwareSensor" />
         <RadioButton
             android:id="@+id/hardwareSensorButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hardware Sensor"/>
+            android:text="@string/compass.ratioButtons.hardwareSensor"/>
 
     </RadioGroup>
 
