--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,8 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="de.haw_hamburg.sensorapp.navigation.BottomNavigationActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_item_compass"
+        android:enabled="true"
+        android:icon="@drawable/ic_explore_black_24dp"
+        android:title="@string/menu.compass"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_item_spiritLevel"
+        android:enabled="true"
+        android:icon="@drawable/ic_straighten_black_24dp"
+        android:title="@string/menu.spiritLevel"
+        app:showAsAction="ifRoom" />
 </menu>
