Revert Changes, Fixed getting dimensions of not measured imageview

--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -24,8 +24,7 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="511dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
