--- a/app/src/main/res/layout/fragment_spirit_level.xml
+++ b/app/src/main/res/layout/fragment_spirit_level.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="56dp"
+    android:layout_marginBottom="56dp">
 
     <de.haw_hamburg.sensorapp.spiritlevel.SpiritLevelView
         android:id="@+id/spiritLevelView"
