--- a/app/src/main/res/layout/fragment_compass.xml
+++ b/app/src/main/res/layout/fragment_compass.xml
@@ -45,6 +45,7 @@
         android:id="@+id/compassView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true">
     </de.haw_hamburg.sensorapp.compass.CompassView>
 
