set default position of toggleswitch dependent on sensor state

--- a/app/src/main/res/layout/list_item_subheader.xml
+++ b/app/src/main/res/layout/list_item_subheader.xml
@@ -6,5 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:listPreferredItemHeightSmall"
-    tools:text="Subheader"
-    android:checked="false" />
+    tools:text="Subheader" />
