--- a/app/src/main/res/layout/fragment_recorder.xml
+++ b/app/src/main/res/layout/fragment_recorder.xml
@@ -3,12 +3,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/controlButton"
-        android:visibility="invisible" />
+    <LinearLayout
+        android:id="@+id/recorderControlsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/lineChartsViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+            <android.support.v4.view.PagerTabStrip
+                android:id="@+id/lineChartPagerTabStrip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top" />
+
+        </android.support.v4.view.ViewPager>
+
+        <Button
+            android:id="@+id/controlButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recorder.control.start" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/noSensorsEnabledContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/noSensorsEnabledHint"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/recorder.noSensorsEnabled.hint"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/openSettingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/recorder.noSensorsEnabled.openSettings" />
+    </LinearLayout>
+
 </RelativeLayout>
